--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -9,5 +9,7 @@
     "skyocean.mining.mineshaft.announce": "Announce Mineshaft Enter",
     "skyocean.mining.mineshaft.announce.desc": "Send a chat or party message when you enter a Mineshaft.\nWill send in chat if not in a party.",
     "skyocean.mining.mineshaft.announce-type": "Announcement Type",
-    "skyocean.mining.mineshaft.announce-type.desc": "The type of message to send when you enter a Mineshaft."
+    "skyocean.mining.mineshaft.announce-type.desc": "The type of message to send when you enter a Mineshaft.",
+    "skyocean.mining.mineshaft.waypoint": "Corpse Waypoint",
+    "skyocean.mining.mineshaft.waypoint.desc": "Show a waypoint on all possible Corpse Locations in a Mineshaft."
 }
