--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -13,18 +13,6 @@
         "blaze": {
           "@value": "Blaze Slayer Highlight",
           "desc": "Highlights the blaze slayer in the color of the current attunement"
-        },
-        "own_boss": {
-          "@value": "Highlight Own Boss",
-          "desc": "Adds a glow effect to your own slayer bosses."
-        },
-        "minis": {
-          "@value": "Highlight minis",
-          "desc": "Adds a <red>red</red> glow effect to slayer minibosses ",
-          "big_boys": {
-            "@value": "Highlight big minis",
-            "desc": "Changes the color of big minibosses to be <dark_red>dark red</dark_red>."
-          }
         }
       }
     },
@@ -41,6 +29,10 @@
         "announce-type": {
           "@value": "Announcement Type",
           "desc": "The type of message to send when you enter a Mineshaft."
+        },
+        "waypoint": {
+          "@value": "Corpse Waypoint",
+          "desc": "Show a waypoint on all possible Corpse Locations in a Mineshaft."
         }
       }
     }
