Profile In Chat

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -35,6 +35,13 @@
           "desc": "Show a waypoint on all possible Corpse Locations in a Mineshaft."
         }
       }
+    },
+    "chat": {
+      "@value": "Chat Config",
+      "profile_in_chat": {
+        "@value": "Profile in Chat",
+        "desc": "Show the profile icon in chat messages."
+      }
     }
   }
 }
