Profile in chat (#6)
* Increase gradle memory because it crashes on first build

* Profile In Chat

* removed "Config" affix in translation Strings to keep consistency and as it is quite redundant

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -18,7 +18,7 @@
     },
     "mining": {
       "mineshaft": {
-        "@value": "Mineshaft Config",
+        "@value": "Mineshaft",
         "announce": {
           "@value": "Announce Mineshaft Enter",
           "desc": [
@@ -34,6 +34,13 @@
           "@value": "Corpse Waypoint",
           "desc": "Show a waypoint on all possible Corpse Locations in a Mineshaft."
         }
+      }
+    },
+    "chat": {
+      "@value": "Chat",
+      "profile_in_chat": {
+        "@value": "Profile in Chat",
+        "desc": "Show the profile icon in chat messages."
       }
     }
   }
