feat: amount of keys in sacks chat message
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -79,6 +79,10 @@
         "waypoint": {
           "@value": "Corpse Waypoint",
           "desc": "Show a waypoint on all possible Corpse Locations in a Mineshaft."
+        },
+        "key-announce": {
+          "@value": "Key Announce",
+          "desc": "Send a chat message how many keys of the current mineshaft corpses you have in your sacks."
         }
       }
     },
