refactor: use meowdding lib
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "@ocean:metadata": {
+  "@meowdding:metadata": {
     "allowMultiline": true,
     "allowReferences": true,
     "allowTags": true,
