feat: previous servr
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -145,6 +145,15 @@
       "ministerInCalendar": {
         "@value": "Minister in Calendar",
         "desc": "Adds a current minister next to the mayor in the calendar."
+      },
+      "previousServer": {
+        "@value": "Previous Server",
+        "desc": "Sends a chat message when you join a server you were previously in."
+      },
+      "previousServerTime": {
+        "@value": "Previous Server Time",
+        "desc": "After leaving a server, the time in seconds before the mod forgets that you were in that server."
+        // TODO hilfe ich kann nicht englisch
       }
     },
     "fishing": {
