--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -145,6 +145,10 @@
       "ministerInCalendar": {
         "@value": "Minister in Calendar",
         "desc": "Adds a current minister next to the mayor in the calendar."
+      },
+      "anvilHelper": {
+        "@value": "Anvil helper",
+        "desc": "Highlights books that have the same enchantment as the ones in the anvil."
       }
     },
     "fishing": {
