--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -149,6 +149,14 @@
       "anvilHelper": {
         "@value": "Anvil helper",
         "desc": "Highlights books that have the same enchantment as the ones in the anvil."
+      },
+      "previousServer": {
+        "@value": "Previous Server",
+        "desc": "Sends a chat message when you join a server you were previously in."
+      },
+      "previousServerTime": {
+        "@value": "Previous Server Time",
+        "desc": "The time a server is cached and shows up as previously joined."
       }
     },
     "fishing": {
