feat: add puzzler solver :3

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -123,6 +123,10 @@
           "@value": "Area Walls",
           "desc": "Adds walls between the areas in the crystal hollows."
         }
+      },
+      "puzzler": {
+        "@value": "Puzzler Solver",
+        "desc": "Highlights the correct block for the puzzler."
       }
     },
     "chat": {
