feat: hidden pet candy
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -166,6 +166,10 @@
         "@value": "Hide Lightning",
         "desc": "Hides lightning bolts and sky flash effect."
       },
+      "showHiddenPetCandy": {
+        "@value": "Show Hidden Pet Candy",
+        "desc": "Hypixel hides the pet candy line once its max level, this feature readds the line."
+      },
       "transparentArmor": {
         "@value": "Transparent Armour",
         "desc": [
