feat: pest bait type
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -147,6 +147,13 @@
         "desc": "The items to show notifications for."
       }
     },
+    "garden": {
+      "@value": "Garden",
+      "pest_bait_type": {
+        "@value": "Pest Bait Type",
+        "desc": "Adds a UI element that shows which pest bait increases the chance of spawning a specific pest."
+      }
+    },
     "misc": {
       "@value": "Miscellaneous",
       "ministerInCalendar": {
@@ -233,5 +240,8 @@
         }
       }
     }
+  },
+  "garden": {
+    "pest_bait_type": "<dark_gray>Pest Bait Type</dark_gray>"
   }
 }
