feat: init screen
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -9,6 +9,7 @@
       "transparency": "Values range from 0-100%, 100% means it is fully visible."
     }
   },
+  "@value": "SkyOcean",
   "config": {
     "main": {
       "modifications": {
