--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -217,6 +217,10 @@
         "@value": "Hook Text Scale",
         "desc": "Changes the scale of the text above your fishing hook/bobber."
       },
+      "lava_replacement": {
+        "@value": "Lava Replacement",
+        "desc": "Replaces the lava texture with the water texture while in the Crimson Isle."
+      },
       "hotspot": {
         "@value": "Hotspot Highlight",
         "desc": "All settings for the hotspot highlight.",
