refactor: idk changes
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -258,6 +258,7 @@
     "pest_bait_type": "<dark_gray>Pest Bait Type</dark_gray>"
   },
   "item_search": {
-    "keybind": "Item Search"
+    "keybind": "Item Search",
+    "item_value": "Item Value"
   }
 }
