feat: init sack value
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -257,6 +257,9 @@
   "garden": {
     "pest_bait_type": "<dark_gray>Pest Bait Type</dark_gray>"
   },
+  "inventory": {
+    "sack_value": "<dark_gray>Sack Value</dark_gray>"
+  },
   "item_search": {
     "keybind": "Item Search"
   }
