dedupe with not merged mlib release
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -258,7 +258,9 @@
     "pest_bait_type": "<dark_gray>Pest Bait Type</dark_gray>"
   },
   "item_search": {
-    "keybind": "Item Search",
-    "item_value": "Item Value"
+    "keybind": "Item Search"
+  },
+  "item_value": {
+    "keybind": "Item Value"
   }
 }
