Config and translations, now time for cleanup

--- a/src/client/resources/assets/skyocean/lang/en_us.json
+++ b/src/client/resources/assets/skyocean/lang/en_us.json
@@ -206,6 +206,25 @@
           "@value": "Others",
           "desc": "Only applies to other players."
         }
+      },
+      "inventoryButtons": {
+        "@value": "Inventory Buttons",
+        "desc": [
+          "Settings to configure and change inventory buttons."
+        ],
+        "enabled": {
+          "@value": "Inventory Buttons",
+          "desc": [
+            "Whether to show the Inventory Buttons."
+          ]
+        },
+        "edit": {
+          "@value": "Edit Buttons",
+          "desc": [
+            "Configure Buttons in a separate UI.",
+            "<italic>Also accessible through /skyocean buttons</italic>"
+          ]
+        }
       }
     },
     "fishing": {
