feat: sack button
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/lang/en_us.json
+++ b/src/client/lang/en_us.json
@@ -296,7 +296,8 @@
     }
   },
   "garden": {
-    "pest_bait_type": "<dark_gray>Pest Bait Type</dark_gray>"
+    "pest_bait_type": "<dark_gray>Pest Bait Type</dark_gray>",
+    "open_sack": "<dark_gray>Open Sack</dark_gray>"
   },
   "inventory": {
     "sack_value": "<dark_gray>Sack Value</dark_gray>"
