feat: mute phantoms
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/client/lang/en_us.json
+++ b/src/client/lang/en_us.json
@@ -179,6 +179,10 @@
     },
     "misc": {
       "@value": "Miscellaneous",
+      "muteThePhantoms": {
+        "@value": "Mute the Phantoms",
+        "desc": "Mutes all phantoms making them not induce ear pain."
+      },
       "ministerInCalendar": {
         "@value": "Minister in Calendar",
         "desc": "Adds a current minister next to the mayor in the calendar."
