--- a/src/client/lang/en_us.json
+++ b/src/client/lang/en_us.json
@@ -271,8 +271,8 @@
         }
       }
     },
-    "lore_cleanup": {
-      "@value": "Lore Cleanup",
+    "lore_modifiers": {
+      "@value": "Lore Modifiers",
       "modifications": {
         "@value": "Lore Modifications",
         "desc": [
@@ -292,6 +292,14 @@
           "§aOn:",
           "<gray>Fuel Tank: <red>Not Installed"
         ]
+      },
+      "dungeon_quality": {
+        "@value": "Dungeon Quality",
+        "desc": "Adds the dungeon quality to the lore.",
+        "highlight_perfect": {
+          "@value": "Highlight perfect items.",
+          "desc": "Highlights the dungeon quality line for items with a 50/50 score."
+        }
       }
     }
   },
