--- a/src/client/lang/en_us.json
+++ b/src/client/lang/en_us.json
@@ -179,6 +179,11 @@
     },
     "misc": {
       "@value": "Miscellaneous",
+      "muteThePhantoms": {
+        "@value": "Mute the Phantoms",
+        "desc": "Mutes all phantoms making them not induce ear pain.",
+        "warning": "<yellow>SkyOcean mutes the phantom sounds by default, if you wish to change this open the config and search for <gold>Mute the Phantoms</gold>!"
+      },
       "ministerInCalendar": {
         "@value": "Minister in Calendar",
         "desc": "Adds a current minister next to the mayor in the calendar."
