feat: dungeon quality (#49)
* feat: dungeon quality

* upsi

* empa changes

Co-authored-by: Empa <42304516+itsempa@users.noreply.github.com>

* empa changes

Co-authored-by: Empa <42304516+itsempa@users.noreply.github.com>

---------

Co-authored-by: Gravy Boat <gravy@thatgravyboat.tech>
Co-authored-by: Empa <42304516+itsempa@users.noreply.github.com>

--- a/src/client/lang/en_us.json
+++ b/src/client/lang/en_us.json
@@ -276,8 +276,8 @@
         }
       }
     },
-    "lore_cleanup": {
-      "@value": "Lore Cleanup",
+    "lore_modifiers": {
+      "@value": "Lore Modifiers",
       "modifications": {
         "@value": "Lore Modifications",
         "desc": [
@@ -297,6 +297,10 @@
           "§aOn:",
           "<gray>Fuel Tank: <red>Not Installed"
         ]
+      },
+      "dungeon_quality": {
+        "@value": "Dungeon Quality",
+        "desc": "Adds the dungeon quality to the lore."
       }
     }
   },
